# cgf2

./: CMakeLists.txt  README.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.cpp
